changes in the float.html file

--- a/Float/Float.html
+++ b/Float/Float.html
@@ -32,5 +32,6 @@
 
     <span class="text-three">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt iure voluptatibus minus mollitia a. Nulla, ipsum eveniet molestias velit optio neque illo, vel inventore rem quod nihil ducimus eligendi ea!</span>
 
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, libero? Eveniet reiciendis, dolorum quia molestias maxime ab saepe, atque in corporis quibusdam quidem quae aspernatur necessitatibus est minus deleniti molestiae!</p>
 </body>
 </html>
